--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,9 +30,9 @@
                 <div class="pull-right">
                     <ul class="nav navbar-nav nav1">
                         <li><a routerLink='/music'>Music</a></li>
-                        <li><a routerLink="/chart">chart</a></li>
+                        <li><a routerLink="/chart">charts</a></li>
                         <li><a routerLink="/events">events</a></li>
-                        <li><a routerLink="/features">features</a></li>
+                        <!-- <li><a routerLink="/features">features</a></li> -->
                         <li><a routerLink="/profile">my account</a></li>
                     </ul>
                     <form action="#" class="navbar-form pull-right">
