--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,7 +33,36 @@ h1{
   font-size: 17px;
 }
 .b1{
-  background-color: white;
   float: right;
   color:#02075d;
+}
+.button {
+  background-color: #02075d; 
+  border: none;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+}
+.button1 {
+  background-color: darkgrey; 
+  color: black;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 4px 2px;
+}
+.button5 {border-radius: 12px;}
+.hrtag {
+  border-bottom-style: solid;
+  text-align: center;
+  color: #02075d;
+}
+.features{
+  text-align: center;
+  margin:0px 0px 20px;
 }
