--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@ body{
 }
 .t1 img{
   width: 100%;
+  height: 100%;
 }
 .t1 p{
   padding: 3%;
@@ -86,4 +87,10 @@ h1{
 .features{
   text-align: center;
   margin:0px 0px 20px;
+}
+.tab{
+  width:45%;
+}
+.icon:active{
+    color: red;
 }
